--- a/Exercises/teste-mock.Repository/teste-mock.Repository.csproj
+++ b/Exercises/teste-mock.Repository/teste-mock.Repository.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Teste unitários de Moq\teste-mock.Models\teste-mock.Models.csproj" />
   </ItemGroup>
 
